// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL: Transaction transaction should fetch transaction by ID 1`] = `
Object {
  "date": "2019-04-26",
  "id": "1",
  "price": 375000,
}
`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] with postcode range: 1st page 1`] = `
Array [
  Object {
    "date": "2019-04-26",
    "id": "2",
    "price": 545000,
  },
  Object {
    "date": "2019-04-26",
    "id": "1",
    "price": 375000,
  },
  Object {
    "date": "2019-03-25",
    "id": "3",
    "price": 341250,
  },
]
`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] with postcode range: 2nd page 1`] = `Array []`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] within date range 1`] = `
Array [
  Object {
    "date": "2019-04-26",
    "id": "2",
    "price": 545000,
  },
  Object {
    "date": "2019-04-26",
    "id": "1",
    "price": 375000,
  },
  Object {
    "date": "2019-03-25",
    "id": "3",
    "price": 341250,
  },
]
`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] within date range: 2nd page 1`] = `
Array [
  Object {
    "date": "2017-11-10",
    "id": "4",
    "price": 38000000,
  },
  Object {
    "date": "2018-05-09",
    "id": "6",
    "price": 246000,
  },
  Object {
    "date": "2017-11-28",
    "id": "5",
    "price": 326600,
  },
]
`;

exports[`GraphQL: Transaction transactionSearch [presets: perPage 3] without criteria 1`] = `
Array [
  Object {
    "date": "2019-04-26",
    "id": "2",
    "price": 545000,
  },
  Object {
    "date": "2019-04-26",
    "id": "1",
    "price": 375000,
  },
  Object {
    "date": "2019-03-25",
    "id": "3",
    "price": 341250,
  },
]
`;
